--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_TMDB_API=1bb965af6888496c30d52a27e831f9c9
 NEXT_PUBLIC_TMDB_API_KEY=1bb965af6888496c30d52a27e831f9c9
-NEXT_PUBLIC_TMBD_IMAGE_URL=
+NEXT_PUBLIC_TMBD_IMAGE_URL=https://image.tmdb.org
 NEXT_PUBLIC_PROVIDER_URL=
 
 NEXT_PUBLIC_STREAM_URL_AGG=
@@ -20,11 +20,11 @@ NEXT_PUBLIC_STREAM_URL_POR=
 NEXT_PUBLIC_STREAM_URL_WEB=
 
 
-NEXT_PUBLIC_FB_API_KEY=
-NEXT_PUBLIC_FB_AUTH_DOMAIN=
-NEXT_PUBLIC_FB_PROJECT_ID=
-NEXT_PUBLIC_FB_STORAGE_BUCKET=
-NEXT_PUBLIC_FB_SENDER_ID=
-NEXT_PUBLIC_FB_APP_ID=
-NEXT_PUBLIC_FB_MEASUREMENT_ID=
-NEXT_PUBLIC_GT_MEASUREMENT_ID=
+NEXT_PUBLIC_FB_API_KEY=AIzaSyChgUxG86jnYiVli3SY9pma7JccWcK0hPo
+NEXT_PUBLIC_FB_AUTH_DOMAIN=tmovies-5b2d0.firebaseapp.com
+NEXT_PUBLIC_FB_PROJECT_ID=tmovies-5b2d0
+NEXT_PUBLIC_FB_STORAGE_BUCKET=tmovies-5b2d0.appspot.com
+NEXT_PUBLIC_FB_SENDER_ID=862069058271
+NEXT_PUBLIC_FB_APP_ID=1:862069058271:web:ee5c015b634a43baa2976a
+NEXT_PUBLIC_FB_MEASUREMENT_ID=G-2BDVN2K9R3
+NEXT_PUBLIC_GT_MEASUREMENT_ID=99085470
