--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_TMDB_API=1bb965af6888496c30d52a27e831f9c9
+NEXT_PUBLIC_TMDB_API=https://api.themoviedb.org/3
 NEXT_PUBLIC_TMDB_API_KEY=1bb965af6888496c30d52a27e831f9c9
 NEXT_PUBLIC_TMBD_IMAGE_URL=https://image.tmdb.org
 NEXT_PUBLIC_PROVIDER_URL=
