--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
 NEXT_PUBLIC_TMDB_API=https://api.themoviedb.org/3
 NEXT_PUBLIC_TMDB_API_KEY=1bb965af6888496c30d52a27e831f9c9
-NEXT_PUBLIC_TMBD_IMAGE_URL=https://image.tmdb.org
+NEXT_PUBLIC_TMBD_IMAGE_URL=https://image.tmdb.org/
 NEXT_PUBLIC_PROVIDER_URL=
 
 NEXT_PUBLIC_STREAM_URL_AGG=
-NEXT_PUBLIC_STREAM_URL_VID=
+NEXT_PUBLIC_STREAM_URL_VID=https://vidsrc.me/embed/imdbId/
 NEXT_PUBLIC_STREAM_URL_PRO=
-NEXT_PUBLIC_STREAM_URL_EMB=
+NEXT_PUBLIC_STREAM_URL_EMB=https://fsapi.xyz/movie
 NEXT_PUBLIC_STREAM_URL_MULTI=
 NEXT_PUBLIC_STREAM_URL_SUP=
 NEXT_PUBLIC_STREAM_URL_CLUB=
@@ -17,7 +17,7 @@ NEXT_PUBLIC_STREAM_URL_PRIME=
 NEXT_PUBLIC_STREAM_URL_RGS=
 NEXT_PUBLIC_STREAM_URL_FRE=
 NEXT_PUBLIC_STREAM_URL_POR=
-NEXT_PUBLIC_STREAM_URL_WEB=
+NEXT_PUBLIC_STREAM_URL_WEB=https://vidsrc.me/embed/imdbId
 
 
 NEXT_PUBLIC_FB_API_KEY=AIzaSyChgUxG86jnYiVli3SY9pma7JccWcK0hPo
