--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_TMDB_API=https://api.themoviedb.org/3
 NEXT_PUBLIC_TMDB_API_KEY=1bb965af6888496c30d52a27e831f9c9
-NEXT_PUBLIC_TMBD_IMAGE_URL=https://image.2embed.io/t/p/w300
+NEXT_PUBLIC_TMBD_IMAGE_URL=https://image.2embed.io/
 NEXT_PUBLIC_PROVIDER_URL=https://rive-tauri.vercel.app
 
 NEXT_PUBLIC_STREAM_URL_AGG=
